Migrate JEI integration, fixes #8048